--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 * {
+    font-family: "Roboto", sans-serif;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -8,4 +9,8 @@
     width: 1270px;
     padding: 15px;
     margin: 0 auto;
+}
+
+body {
+    background-color: #0f1014;
 }
